Matching is working now, card covers now working if cards don't match; disable cards if match is correct is working

--- a/JavaScript_course_projects/memory_match/styles/styles.css
+++ b/JavaScript_course_projects/memory_match/styles/styles.css
@@ -70,12 +70,22 @@ main {
   width: 100%;
   height: 220px;
   opacity: 1;
-  transition: opacity .3s;
+  transition: opacity .3
 }
 
 .card-show {
   opacity: 0;
+  /* animation-name: card-show;
+  animation-duration: 5s; */
 }
+
+/* @keyframes card-show {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+} */
+
+
 
 p {
   font-family: 'Roboto', sans-serif;
